--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@ html {
 *::after {
   margin: 0;
   padding: 0;
-  border: none;
+  border: 0;
 }
 
 h1,
@@ -25,8 +25,6 @@ p {
 li,
 ul,
 ol {
-  margin: 0;
-  padding: 0;
   list-style: none;
 }
 
@@ -56,12 +54,16 @@ $btnBgPrimaryColor: #111b47;
 $btnBgSecondaryColor: #ffffff;
 
 // base selectors
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+}
+
 .section {
-  margin: 0 auto;
-  max-width: 1440px;
 }
 
 .container {
+  margin: 0 auto;
   padding: 0 10px;
   max-width: 1130px;
 }
@@ -70,45 +72,57 @@ $btnBgSecondaryColor: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   box-sizing: border-box;
 
   color: $btnPrimaryColor;
-  background: $btnBgPrimaryColor;
+  background-color: $btnBgPrimaryColor;
   border: 2px solid $btnBgPrimaryColor;
+
+  transition: background-color 0.3s linear;
 
   &:hover,
   &:focus {
     color: $primaryColor;
-    background: $btnBgSecondaryColor;
+    background-color: $btnBgSecondaryColor;
     border-radius: 2px;
   }
 }
 
 // header
 .header {
-  margin: 0 auto;
-  max-width: 1440px;
+}
+
+.header__box {
+  position: relative;
 }
 
 .header__wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  width: 100%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-height: 60px;
+  padding: 0 10px;
 }
 
-.header__menu {
+.menu {
 }
 
-.header__menu-list {
-  display: flex;
+.menu-list {
+  display: inline-flex;
   gap: 60px;
 }
 
-.header__menu-item {
+.menu-item {
 }
 
-.header__menu-link {
+.menu-link {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
@@ -133,11 +147,31 @@ $btnBgSecondaryColor: #ffffff;
 
 // intro
 .intro {
+  position: relative;
+  max-width: 1440px;
+  min-height: 1160px;
+  margin: 0 auto;
+}
+
+.intro__wrapper {
+  position: relative;
+}
+
+.intro__img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  max-width: 1278px;
+  height: 100vh;
 }
 
 .intro__body {
-  padding-top: 300px;
-  padding-bottom: 390px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  padding: 300px 10px 0 10px;
   max-width: 540px;
 }
 
@@ -159,7 +193,7 @@ $btnBgSecondaryColor: #ffffff;
 }
 
 .intro__buttom {
-  display: flex;
+  display: inline-flex;
   gap: 30px;
 }
 
@@ -168,4 +202,244 @@ $btnBgSecondaryColor: #ffffff;
   line-height: 1.62;
   width: 190px;
   height: 35px;
+}
+
+// advatage
+.advatage {
+}
+
+.advatage__body {
+  max-width: 540px;
+}
+
+.advatage__box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.advatage__title {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 1.33;
+  color: $primaryColor;
+  padding-bottom: 16px;
+}
+
+.advatage__text {
+  font-weight: 400;
+  line-height: 1.62;
+  padding-bottom: 80px;
+}
+
+.advatage__items {
+  display: flex;
+  gap: 30px;
+}
+
+.advatage__item {
+  max-width: 255px;
+}
+
+.advatage__item-img {
+  padding-bottom: 14px;
+  width: 36px;
+  height: 36px;
+}
+
+.advatahe__item-title {
+  font-weight: 500;
+  line-height: 1.62;
+  color: $primaryColor;
+  padding-bottom: 6px;
+}
+
+.advatage__item-text {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #5d6970;
+}
+
+.advatage__img {
+  padding-top: 60px;
+  padding-bottom: 108px;
+  max-width: 540px;
+}
+
+// product
+.product {
+}
+
+.product__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product__img {
+}
+.product__img-one {
+  padding-top: 123px;
+  padding-bottom: 130px;
+  padding-left: 28px;
+  max-width: 480px;
+}
+.product__img-two {
+  padding-top: 92px;
+  padding-bottom: 115px;
+  max-width: 540px;
+}
+.product__img-three {
+  padding-top: 142px;
+  padding-bottom: 164px;
+  padding-left: 45px;
+  max-width: 445px;
+}
+
+.product__body {
+  max-width: 445px;
+}
+
+.product__title {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 1.33;
+  color: $primaryColor;
+  padding-bottom: 16px;
+}
+
+.product__text {
+  font-weight: 400;
+  line-height: 1.62;
+  padding-bottom: 40px;
+}
+
+.product__btn {
+  width: 150px;
+  height: 32px;
+}
+
+// price
+.price {
+  background-image: url("../img/price.png");
+  background-repeat: no-repeat;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.price__box {
+  padding-top: 238px;
+  padding-bottom: 172px;
+  margin: 0 auto;
+  max-width: 600px;
+}
+
+.price__title {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 1.33;
+  color: $primaryColor;
+  text-align: center;
+  padding-bottom: 16px;
+}
+
+.price__text {
+  font-weight: 400;
+  line-height: 1.62;
+  text-align: center;
+  padding-bottom: 36px;
+}
+
+.price__info {
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 13px;
+  max-width: 350px;
+}
+
+.price__info-title {
+  font-size: 50px;
+  font-weight: 500;
+  line-height: 1.32;
+  letter-spacing: 1px;
+  color: #222f65;
+}
+
+.price__info-sabtitle {
+  font-weight: 400;
+  line-height: 1.62;
+  color: #37447e;
+  padding-bottom: 60px;
+}
+
+.price__info-text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.71;
+  color: #5d6970;
+}
+
+.price__btn {
+  margin: 0 auto;
+  width: 190px;
+  height: 32px;
+}
+
+// footer
+.footer {
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: #e7ecff;
+}
+
+.footer__box {
+}
+
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 140px;
+  border-bottom: 1px solid #cdd1d4;
+}
+
+.footer__inner-text {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.71;
+  color: #939ea4;
+}
+
+.footer__inner-btn {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.5;
+  width: 109px;
+  height: 26px;
+}
+
+.footer__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 76px;
+}
+
+.footer__nav {
+}
+
+.footer__nav-link {
+  color: #929ecc;
+}
+
+.footer__socials {
+  display: inline-flex;
+  gap: 30px;
+}
+.footer__socials-item {
+  width: 16px;
+  height: 16px;
+}
+.footer__social-link {
 }
