--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,11 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 768px) {
+  .product__box {
+    flex-wrap: wrap;
+  }
+}
 
 .product__img-one {
   padding-top: 123px;
@@ -263,7 +268,11 @@ body {
 .product__body {
   max-width: 445px;
 }
-
+@media (max-width: 1020px) {
+  .product__body {
+    padding-left: 5px;
+  }
+}
 .product__title {
   font-size: 36px;
   font-weight: 500;
